--- a/project/frontend/src/styles/HomePage.css
+++ b/project/frontend/src/styles/HomePage.css
@@ -16,7 +16,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
   }
   
   .search-input {
@@ -33,19 +33,12 @@
     border-color: #5a67d8;
   }
   
-  .search-button {
-    background: #5a67d8;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 0 5px 5px 0;
-    transition: background 0.3s;
-  }
-  
   .search-button:hover {
     background: #434190;
+  }
+
+  .label-home {
+    font-size: 18px;
   }
   
   .categories {
@@ -57,8 +50,8 @@
   
   .category {
     position: relative;
-    width: 300px;
-    height: 200px;
+    width: 420px;
+    height: 640px;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
@@ -84,11 +77,11 @@
   }
   
   .category.imoveis .category-image {
-    background-image: url("https://via.placeholder.com/300x200?text=Imóveis");
+    background-image: url("../imagens/apt.jpg");
   }
   
   .category.carros .category-image {
-    background-image: url("https://via.placeholder.com/300x200?text=Carros");
+    background-image: url("../imagens/carro2.jpg");
   }
   
   .category p {
