--- a/project/frontend/src/styles/Login.css
+++ b/project/frontend/src/styles/Login.css
@@ -1,7 +1,5 @@
-/* Login Page Styling */
-
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Arial', 'sans-serif';
     margin: 0;
     padding: 0;
     display: flex;
