--- a/project/frontend/src/styles/HomePage.css
+++ b/project/frontend/src/styles/HomePage.css
@@ -1,124 +1,122 @@
 .homepage-container {
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  min-width: 100vw;
+}
+
+.main-content {
+  flex: 1;
+  padding: 80px 20px 20px; /* Adicionar padding-top para evitar corte pelo Topbar */
+  text-align: center;
+  background: #ffffff;
+}
+
+.search-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.search-input {
+  width: 300px;
+  padding: 10px;
+  font-size: 16px;
+  border: 2px solid #ddd;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+.search-input:focus {
+  border-color: #5a67d8;
+}
+
+.search-button:hover {
+  background: #434190;
+}
+
+.categories {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.category {
+  position: relative;
+  width: 420px;
+  height: 640px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.category:hover {
+  transform: translateY(-10px);
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+}
+
+.category-image {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  opacity: 0.8;
+  transition: opacity 0.3s;
+  cursor: pointer;
+}
+
+.category:hover .category-image {
+  opacity: 1;
+}
+
+.category.imoveis .category-image {
+  background-image: url("../imagens/apt.jpg");
+}
+
+.category.carros .category-image {
+  background-image: url("../imagens/carro2.jpg");
+}
+
+.category p {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 1.5rem;
+  color: white;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  font-family: 'Montserrat-bold';
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+  .categories {
     flex-direction: column;
-    min-height: 100vh;
-    min-width: 100vw;
-  }
-  
-  .main-content {
-    flex: 1;
-    padding: 80px 20px 20px; /* Adicionar padding-top para evitar corte pelo Topbar */
-    text-align: center;
-    background: #f9f9f9;
-  }
-  
-  .search-container {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    margin-bottom: 10px;
-  }
-  
-  .search-input {
-    width: 300px;
-    padding: 10px;
-    font-size: 16px;
-    border: 2px solid #ddd;
-    border-radius: 5px 0 0 5px;
-    outline: none;
-    transition: border-color 0.3s;
-  }
-  
-  .search-input:focus {
-    border-color: #5a67d8;
-  }
-  
-  .search-button:hover {
-    background: #434190;
   }
 
-  .label-home {
-    font-size: 18px;
-  }
-  
-  .categories {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
-  }
-  
   .category {
-    position: relative;
-    width: 420px;
-    height: 640px;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s, box-shadow 0.3s;
-  }
-  
-  .category:hover {
-    transform: translateY(-10px);
-    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
-  }
-  
-  .category-image {
     width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-    opacity: 0.8;
-    transition: opacity 0.3s;
+    max-width: 400px;
   }
-  
-  .category:hover .category-image {
-    opacity: 1;
+
+  .search-container {
+    flex-direction: column;
+    gap: 10px;
   }
-  
-  .category.imoveis .category-image {
-    background-image: url("../imagens/apt.jpg");
+
+  .search-input {
+    width: 100%;
+    border-radius: 5px;
   }
-  
-  .category.carros .category-image {
-    background-image: url("../imagens/carro2.jpg");
+
+  .search-button {
+    width: 100%;
+    border-radius: 5px;
   }
-  
-  .category p {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 1.5rem;
-    color: white;
-    font-weight: bold;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
-  
-  /* Responsividade */
-  @media (max-width: 768px) {
-    .categories {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .category {
-      width: 100%;
-      max-width: 400px;
-    }
-  
-    .search-container {
-      flex-direction: column;
-      gap: 10px;
-    }
-  
-    .search-input {
-      width: 100%;
-      border-radius: 5px;
-    }
-  
-    .search-button {
-      width: 100%;
-      border-radius: 5px;
-    }
-  }
+}
