--- a/project/frontend/src/styles/Imoveis.css
+++ b/project/frontend/src/styles/Imoveis.css
@@ -17,7 +17,7 @@
   padding: 80px 20px 20px;
   /* Adicionar padding-top para evitar corte pelo Topbar */
   text-align: center;
-  background: #f9f9f9;
+  background: #ffffff;
   padding-top: 80px;
   /* Ajuste para compensar a altura do Topbar */
 }
