Ajuste estado logado ao clicar em logout e melhorias visuais tela de imovies

--- a/project/frontend/src/styles/Imoveis.css
+++ b/project/frontend/src/styles/Imoveis.css
@@ -15,7 +15,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   padding: 20px;
   background: #f9f9f9;
 }
@@ -27,6 +26,7 @@
   width: 100%;
   max-width: 600px;
   margin-bottom: 5px;
+  margin-top: 4%;
 }
 
 /* Container do input de pesquisa */
@@ -58,7 +58,7 @@
 .imoveis-search-icon {
   position: absolute;
   right: 15px;
-  top: 55%;
+  top: 62%;
   transform: translateY(-50%);
   color: #888;
   cursor: pointer;
@@ -118,6 +118,7 @@
   width: 1px;
   height: 100%;
   background-color: #646363;
+  margin: 0 10px;
 }
 
 /* Estilo dos filtros individuais */
