--- a/project/frontend/src/styles/Footer.css
+++ b/project/frontend/src/styles/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background: #222;
+    background: #5a67d8;
     color: white;
     padding-bottom: 10px; /* Padding reduzido para diminuir a altura */
     text-align: center;
