--- a/project/frontend/src/styles/Topbar.css
+++ b/project/frontend/src/styles/Topbar.css
@@ -5,12 +5,12 @@
   left: 0;
   width: 100%;
   height: 60px;
-  background: #222;
+  background: #6c5ce7;
   color: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
+  padding: 0 120px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
   z-index: 1000;
   box-sizing: border-box;
@@ -44,7 +44,7 @@
 }
 
 .nav-link:hover {
-  color: #5a67d8;
+  color: #6c5ce7;
 }
 
 .login-btn {
@@ -97,4 +97,50 @@
 
 .logout-btn:hover {
   background: #c82333; /* Cor vermelha mais escura no hover */
+}
+
+.dropbtn {
+  background-color: #6c5ce7;
+  color: white;
+  padding: 16px;
+  font-size: 14px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background 0.3s;
+  align-items: center;
+  justify-content: center;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #6c5ce7;
+  min-width: 185px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #5a4cb1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #5a4cb1;
 }
