--- a/project/frontend/src/App.css
+++ b/project/frontend/src/App.css
@@ -5,7 +5,7 @@ body {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  font-family: Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 *,
