Alterações das rotas para abranger tanto publico quanto privado.

--- a/project/frontend/src/styles/Default.css
+++ b/project/frontend/src/styles/Default.css
@@ -1,7 +1,7 @@
 button {
   height: 40px;
   font-size: 16px;
-  color: #f4f4f4;
+  color: white;
   background-color: #6c5ce7;
   border: none;
   border-radius: 5px;
