--- a/project/frontend/src/styles/Default.css
+++ b/project/frontend/src/styles/Default.css
@@ -7,7 +7,7 @@ button {
   border-radius: 5px;
   cursor: pointer;
   padding: 10px;
-  margin: 10px;
+  margin: 10px 0px;
 }
 
 button:hover {
@@ -20,4 +20,33 @@ button:hover {
 
 .button-width-100 {
   width: 100%;
+}
+
+.input-field {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.padding-10 {
+  padding: 10px;
+}
+
+.margin-10 {
+  margin: 10px;
+}
+
+.display-flex-center {
+  display: flex;
+  justify-content: center;
+}
+
+.justify-content-right {
+  justify-content: right;
+}
+
+.justify-content-left {
+  justify-content: left;
 }
