--- a/project/frontend/src/styles/Login.css
+++ b/project/frontend/src/styles/Login.css
@@ -13,36 +13,23 @@
 
 .login-container {
   display: flex;
-  width: 800px;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  height: 600px;
   background: white;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-.login-box {
-  flex: 1;
-  padding: 40px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .body-login h1 {
   margin-bottom: 20px;
 }
 
-.input-field {
-  width: 100%;
-  padding: 10px;
-  margin: 10px 0;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
 .login-options {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   font-size: 14px;
 }
@@ -69,16 +56,4 @@
   background: none;
   cursor: pointer;
   font-size: 20px;
-}
-
-.info-box {
-  flex: 1;
-  background-color: #6c5ce7;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  text-align: center;
 }
