--- a/project/frontend/src/styles/Default.css
+++ b/project/frontend/src/styles/Default.css
@@ -10,9 +10,9 @@ button {
   margin: 10px;
 }
 
-button:hover {
+/* button:hover {
   background-color: #5a4cb1;
-}
+} */
 
 .button-width-auto {
   width: auto;
