--- a/project/frontend/src/styles/Topbar.css
+++ b/project/frontend/src/styles/Topbar.css
@@ -53,17 +53,10 @@
 .login-btn {
   background: white;
   color: #6c5ce7;
-  border: none;
-  padding: 6px 12px;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background 0.3s;
-  font-size: 14px;
-  height: 36px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
+}
+
+.login-btn:hover {
+  background-color: rgb(243, 236, 236);
 }
 
 /* Novos estilos para a área logada */
